use unicode char

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1961,7 +1961,8 @@ input, select, textarea {
 
         header.major h1 {
 			position: relative;
-            font-weight: normal;
+            font-weight: 300;
+            font-family: FiraSans Light;
 		}
 
         header.major h2, header.major h3, header.major h4, header.major h5, header.major h6 {
