--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2399,7 +2399,7 @@ ul.image-grid {
 	ul.image-grid li {
 		display: block;
 		float: left;
-		padding: 1em 0;
+		padding: 1em;
 		width: 50%;
 	}
 
@@ -2410,7 +2410,7 @@ ul.image-grid {
 		ul.image-grid li p {
 			color: #6f7577;
 			font-family: 'Fira Sans', sans-serif;
-			font-size: 90%;
+			/* font-size: 90%; */
 			font-weight: 400;
 			line-height: 1.25em;
 		}
