update style and image

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -131,14 +131,14 @@ input, select, textarea {
 		-webkit-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
 		-ms-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
 		transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
-		border-bottom: dotted 1px;
-		color: #cf7171;
+		/*border-bottom: dotted 1px;*/
+		color: #343239;
 		text-decoration: none;
 	}
 
 		a:hover {
 			border-bottom-color: transparent !important;
-			color: #cf7171 !important;
+			color: #f03d33 !important;
 			text-decoration: none;
 		}
 
